feat: add frequently questions.

--- a/index.html
+++ b/index.html
@@ -348,3 +348,46 @@
         </div>
       </div>
     </section>
+
+    <section id="questions" class="faq-section">
+      <h2 data-i18n="faq.title">Preguntas Frecuentes</h2>
+      <p class="subtitle" data-i18n="faq.subtitle">Foro de preguntas frecuentes</p>
+
+      <div class="faq-grid">
+        <div class="faq-box">
+          <div class="flex-desplegable" onclick="toggleFaq(this)">
+            <h3 data-i18n="faq.items.1.question">¿Qué es Restock?</h3>
+            <img class="flecha" src="assets/img/preguntas/flecha.svg" alt="Material Icon">
+          </div>
+          <p class="respuesta" data-i18n="faq.items.1.answer">Restock es una plataforma que simplifica la operación
+            gastronómica conectando
+            restaurantes y proveedores, optimizando el inventario y mejorando la eficiencia en cada pedido.</p>
+        </div>
+        <div class="faq-box">
+          <div class="flex-desplegable" onclick="toggleFaq(this)">
+            <h3 data-i18n="faq.items.2.question">¿Cuánto cuesta Restock?</h3>
+            <img class="flecha" src="assets/img/preguntas/flecha.svg" alt="Material Icon">
+          </div>
+          <p class="respuesta" data-i18n="faq.items.2.answer">En Restock, todos nuestros planes te ofrecen los mismos
+            beneficios premium. Puedes
+            suscribirte por más tiempo y acceder a descuentos exclusivos. Elige entre plan mensual, semestral o anual,
+            ¡y optimiza tu operación desde el primer día!</p>
+        </div>
+        <div class="faq-box full-width">
+          <div class="flex-desplegable" onclick="toggleFaq(this)">
+            <h3 data-i18n="faq.items.3.question">¿Cómo funciona Restock?</h3>
+            <img class="flecha" src="assets/img/preguntas/flecha.svg" alt="Material Icon">
+          </div>
+          <p class="respuesta" data-i18n="faq.items.3.answer">Restock permite gestionar inventarios, conectando
+            restaurantes con proveedores de forma
+            rápida y eficiente. ¡Así simplificamos todo el proceso!</p>
+        </div>
+      </div>
+
+
+      <div class="btn-more">
+        <button data-i18n="faq.moreButton">
+          VER MÁS
+        </button>
+      </div>
+    </section>
