--- a/index.html
+++ b/index.html
@@ -391,3 +391,161 @@
         </button>
       </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer class="footer" id="footer">
+    <div class="footer__top">
+      <div class="footer__top-left">
+        <img src="assets/img/restock_logo.png" alt="Restock logo" class="footer__logo" />
+        <p class="footer__text" data-i18n="footer.topLeftText">With Restock, manage your inventory with precision and
+          peace of mind with every move.
+          The efficiency of your kitchen and your business is our priority, 24/7.</p>
+      </div>
+      <div class="footer__top-right-content">
+        <div class="footer__sections">
+          <h4 data-i18n="footer.sectionsTitle">Sections</h4>
+          <ul>
+            <li><a href="#home" data-i18n="footer.sections.about">About us</a></li>
+            <li><a href="#beneficios" data-i18n="footer.sections.benefits">Benefits</a></li>
+            <li><a href="#testimonies" data-i18n="footer.sections.testimonials">Testimonials</a></li>
+            <li><a href="#questions" data-i18n="footer.sections.faq">Questions</a></li>
+            <li><a href="#tutorial" data-i18n="footer.sections.tutorial">Tutorial</a></li>
+            <li><a href="#contacto" data-i18n="footer.sections.contact">Contact</a></li>
+            <li><a href="#download" data-i18n="footer.sections.download">Download</a></li>
+          </ul>
+        </div>
+        <div class="footer__social">
+          <h4 data-i18n="footer.socialTitle">Social Networking</h4>
+          <div class="footer__social-links">
+            <a href="#" aria-label="Facebook"><img src="assets/img/Facebook.png" alt="iconFacebook" />@restock</a>
+            <a href="#" aria-label="Instagram"><img src="assets/img/Instagram.png" alt="iconInstagram" />@restock</a>
+            <a href="#" aria-label="Twitter"><img src="assets/img/Twitter.png" alt="@restock" />@restock</a>
+            <a href="#" aria-label="LinkedIn"><img src="assets/img/LinkedIn.png" alt="Restock" />Restock</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="footer__divider">
+    <div class="footer__bottom">
+      <a href="#politicas" data-i18n="footer.bottom.privacyPolicy">Privacy Policy</a>
+      <span class="divider">|</span>
+      <a href="#terminos" data-i18n="footer.bottom.terms">Terms of Services</a>
+      <span class="divider">|</span>
+      <span data-i18n="footer.bottom.rights">&copy 2025 Restock. All rights reserved.</span>
+    </div>
+  </footer>
+
+  <script src="assets/scripts/main.js" defer></script>
+  <script src="assets/scripts/desplegable-preguntas.js" defer></script>
+  <script src="assets/scripts/translations.js"></script>
+</body>
+
+</html>
