--- a/index.html
+++ b/index.html
@@ -96,7 +96,120 @@
 
 
 
+<main>
 
+    <section class="about-us" id="about-us">
+      <div class="about-us-content">
+        <h1 class="about-us-title" data-i18n="aboutUs.title">Nosotros</h1>
+        <p class="about-us-description" data-i18n="aboutUs.description">
+          Somos <b> UI-Topic </b>, un equipo que simplifica la gestión de inventario de negocios gastronómicos para
+          maximizar sus ganancias.
+        </p>
+        <div class="about-us-cards">
+          <div class="card">
+            <img src="assets/img/about-us/our-help.png" alt="Cómo ayudamos" />
+            <h3 data-i18n="aboutUs.cards.help.title">Cómo ayudamos</h3>
+            <p data-i18n="aboutUs.cards.help.text">Conectamos restaurantes y proveedores mediante una plataforma
+              inteligente que
+              automatiza el control de inventario, optimiza pedidos y mejora la eficiencia
+              operativa en el sector gastronómico.</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/about-us/valor.png" alt="Propuesta de valor" />
+            <h3 data-i18n="aboutUs.cards.value.title">Propuesta de valor</h3>
+            <p data-i18n="aboutUs.cards.value.text">Centralizamos y automatizamos la gestión de inventarios y pedidos en
+              la industria gastronómica,
+              conectando eficientemente a restaurantes y proveedores para reducir desperdicios y tomar
+              decisiones más inteligentes.</p>
+          </div>
+          <div class="card">
+            <img src="assets/img/about-us/mision-vision.png" alt="Misión y Visión" />
+            <h3 data-i18n="aboutUs.cards.mission.title">Misión y Visión</h3>
+            <p data-i18n="aboutUs.cards.mission.text">Impulsamos la eficiencia y sostenibilidad del sector gastronómico
+              con una plataforma inteligente
+              que transforma la gestión de insumos y pedidos para restaurantes y proveedores.</p>
+          </div>
+        </div>
+        <h2 class="about-us-subtitle" data-i18n="aboutUs.team.title">Equipo de Desarrollo</h2>
+
+        <!-- Contenedor del equipo -->
+        <div>
+          <div class="about-us-team-row">
+            <!-- Julio Castro -->
+            <div class="team-card">
+              <div class="profile-image">
+                <img src="assets/img/team/julio.png" alt="Julio Castro" />
+              </div>
+              <p class="team-name">Julio Castro</p>
+              <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
+              <div class="team-socials">
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+
+            <!-- Gabriela Shapiama -->
+            <div class="team-card">
+              <div class="profile-image">
+                <img src="assets/img/team/gaby.jpeg" alt="Gabriela Shapiama" />
+              </div>
+              <p class="team-name">Gabriela Shapiama</p>
+              <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
+              <div class="team-socials">
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+
+            <!-- Jahaziel Guerra -->
+            <div class="team-card">
+              <div class="profile-image">
+                <img src="assets/img/team/jahaziel.jpg" alt="Jahaziel Guerra" />
+              </div>
+              <p class="team-name">Jahaziel Guerra</p>
+              <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
+              <div class="team-socials">
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="about-us-team-row center-row">
+            <!-- Williams Avendaño -->
+            <div class="team-card">
+              <div class="profile-image">
+                <img src="assets/img/team/williams.png" alt="Williams Avendaño" />
+              </div>
+              <p class="team-name">Williams Avendaño</p>
+              <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
+              <div class="team-socials">
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+
+            <!-- Yaku Guzmán -->
+            <div class="team-card">
+              <div class="profile-image">
+                <img src="assets/img/team/yaku.png" alt="Yaku Guzmán" />
+              </div>
+              <p class="team-name">Yaku Guzmán</p>
+              <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
+              <div class="team-socials">
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+    </section>
 
 
 
@@ -549,3 +662,4 @@
 </body>
 
 </html>
+
