feat: add responsive menu

--- a/index.html
+++ b/index.html
@@ -1,4 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Restock - Optimize your inventory</title>
+  <meta name="description"
+    content="Platform for restaurants that reduces waste and increases profits through intelligent inventory and order management.">
+  <meta name="keywords" content="restaurants, inventory management, orders, automation, suppliers, food tech">
+  <meta name="author" content="UI-Topic Team">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="en">
+  <meta name="copyright" content="UI-Topic 2025">
+
+  <!-- Tipografías (solo las necesarias) -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- Ícono -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+  <!-- Íconos Material sin frameworks -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Estilos -->
+
+  <link rel="stylesheet" href="assets/styles/styles.css" />
+  <link rel="stylesheet" href="assets/styles/testimonios.css" />
+  <link rel="stylesheet" href="assets/styles/preguntas-frecuentes.css" />
+  <link rel="stylesheet" href="assets/styles/descargar.css" />
+  <link rel="stylesheet" href="assets/styles/benefits.css" />
+  <link rel="stylesheet" href="assets/styles/tutorial.css" />
+  <link rel="stylesheet" href="assets/styles/contacto.css" />
+  <link rel="stylesheet" href="assets/styles/footer.css" />
+
+</head>
+
+<body>
+  <header>
+    <nav class="navbar">
+      <div class="navbar__logo">
+        <img src="assets/img/restock_logo.png" alt="Logo de Restock" />
+      </div>
+      <button class="navbar__toggle" id="navToggle" aria-label="Menú">
+        <span class="material-icons">menu</span>
+      </button>
+      <div class="navbar__menu">
+        <ul class="navbar__links">
+          <li><a href="#home" class="nav-item" data-link="home" data-i18n="navbar.home">Home</a></li>
+          <li><a href="#about-us" class="nav-item" data-link="nosotros" data-i18n="navbar.about">About</a></li>
+          <li><a href="#benefits" class="nav-item" data-link="benefits" data-i18n="navbar.benefits">Benefits</a></li>
+          <li><a href="#testimonies" class="nav-item" data-link="testimonies"
+              data-i18n="navbar.testimonials">Testimonials</a></li>
+          <li><a href="#questions" class="nav-item" data-link="questions" data-i18n="navbar.questions">Questions</a>
+          </li>
+          <li><a href="#tutorial" class="nav-item" data-link="tutorial" data-i18n="navbar.tutorial">Tutorial</a></li>
+          <li><a href="#contacto" class="nav-item" data-link="contacto" data-i18n="navbar.contact">Contact</a></li>
+          <li><a href="#download" class="nav-item" data-link="download" data-i18n="navbar.download">Download</a></li>
+        </ul>
+        <div class="navbar__actions">
+          <a href="https://restock-4292.github.io/UI-Topic-Frontend/sign-in" class="action" data-i18n="navbar.signin">Sign In</a>
+          <span class="divider">|</span>
+          <a href="https://restock-4292.github.io/UI-Topic-Frontend/sign-up" class="action" data-i18n="navbar.signup">Sign Up</a>
+          <button class="lang-btn" id="langBtn" aria-label="Cambiar idioma">
+            <span class="material-icons">language</span>
+
+          </button>
+        </div>
+      </div>
+    </nav>
 
 
 
