feat: add hero section with welcome message and call to action

--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
       </div>
     </nav>
 
+    <section class="hero" id="home">
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1 data-i18n="hero.title">Welcome to <br>Restock!</h1>
+          <h3 class="subtitle" data-i18n="hero.subtitle">- Presented by UI-Topic -</h3>
+          <p data-i18n="hero.description">
+            Connect, manage and grow seamlessly!<br />
+            Our platform helps you optimize your inventory, simplify ordering and maintain full control of your
+            operations<br />
+            it's time to transform the way you work and collaborate in the food chain!
+          </p>
+          <button class="btn-start" id="btnStart" data-i18n="hero.btnStart"
+            onclick="window.location.href='https://desarrollo-de-app-open-source-curso-upc.github.io/UI-Topic-landing/access.html#signup'">START</button>
+        </div>
+        <div class="hero-image">
+          <img src="assets/img/hero-image.jpg" alt="Store interior" />
+        </div>
+      </div>
+    </section>
+
+  </header>
+
 
 
 
