feat: add new members.

--- a/index.html
+++ b/index.html
@@ -96,102 +96,6 @@
 
   </header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <main>
 
     <section class="about-us" id="about-us">
@@ -275,12 +179,12 @@
           </div>
 
           <div class="about-us-team-row center-row">
-            <!-- Williams Avendaño -->
+            <!-- Sergio Julca -->
             <div class="team-card">
               <div class="profile-image">
-                <img src="assets/img/team/williams.png" alt="Williams Avendaño" />
+                <img src="assets/img/team/sergio.jpg" alt="Sergio Julca" />
               </div>
-              <p class="team-name">Williams Avendaño</p>
+              <p class="team-name">Sergio Julca</p>
               <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
               <div class="team-socials">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -288,13 +192,13 @@
                 <a href="#"><i class="fab fa-github"></i></a>
               </div>
             </div>
-
-            <!-- Yaku Guzmán -->
+ 
+            <!-- Piero Elescano -->
             <div class="team-card">
               <div class="profile-image">
-                <img src="assets/img/team/yaku.png" alt="Yaku Guzmán" />
+                <img src="assets/img/team/piero.png" alt="Piero Elescano" />
               </div>
-              <p class="team-name">Yaku Guzmán</p>
+              <p class="team-name">Piero Elescano</p>
               <p class="team-role" data-i18n="aboutUs.team.role">- Software Engineer -</p>
               <div class="team-socials">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -306,95 +210,105 @@
 
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <section>
+       <div class="about-us-video">
+                        <h2 class="about-us-subtitle" data-i18n="aboutUs.video.title">Equipo de Desarrollo</h2>
+                        <div class="tutorial__video-container">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/WgRCGVA_L8g?si=Oee3ArIqJrEnUftb"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>
+    </section>
+
+    <section class="benefits" id="benefits">
+      <div class="benefits-content">
+        <h1 class="benefits-title" data-i18n="benefits.title">Beneficios</h1>
+        <p class="benefits-description" data-i18n="benefits.description">
+          Descubre cómo nuestra plataforma puede ayudarte a tomar el control
+          de tu inventario y alcanzar tus objetivos económicos de manera inteligente y eficaz.
+        </p>
+        <h2 class="benefits-admin-title" data-i18n="benefits.adminTitle">Dueños/administradores de restaurantes</h2>
+        <div class="benefits-cards-admin">
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/adminbenefit-1.png" alt="Beneficio 1" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.adminCards.1">Control preciso del inventario y reducción de desperdicios.</p>
+            </div>
+
+
+          </div>
+          <div class="benefits-card">
+            <img src="assets/img/benefits/adminbenefit-2.png" alt="Beneficio 2" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.adminCards.2">Gestión eficiente de compras, recetas y abastecimiento.</p>
+            </div>
+          </div>
+
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/adminbenefit-3.png" alt="Beneficio 3" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.adminCards.3">Alertas automáticas y métricas clave para decisiones estratégicas.
+              </p>
+            </div>
+          </div>
+
+          <div class="benefits-card">
+            <img src="assets/img/benefits/adminbenefit-4.png" alt="Beneficio 4" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.adminCards.4">Seguimiento en tiempo real de pedidos y entregas.</p>
+            </div>
+          </div>
+
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/adminbenefit-5.png" alt="Beneficio 5" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.adminCards.5">Evaluación de proveedores y mejora continua de operaciones.</p>
+            </div>
+          </div>
+        </div>
+
+        <h2 class="benefits-supplier-title" data-i18n="benefits.supplierTitle">Proveedores de restaurantes</h2>
+
+        <div class="benefits-cards-supplier">
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/supplierbenefit-6.png" alt="Beneficio 6" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.supplierCards.6">Gestión fácil y actualizada del catálogo de productos.</p>
+            </div>
+          </div>
+          <div class="benefits-card">
+            <img src="assets/img/benefits/supplierbenefit-7.png" alt="Beneficio 7" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.supplierCards.7">Visualización y actualización del estado de órdenes en tiempo
+                real.</p>
+            </div>
+          </div>
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/supplierbenefit-8.png" alt="Beneficio 8" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.supplierCards.8">Acceso a historial de ventas y reportes de facturación.</p>
+            </div>
+          </div>
+          <div class="benefits-card">
+            <img src="assets/img/benefits/supplierbenefit-9.png" alt="Beneficio 9" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.supplierCards.9">Comunicación directa con restaurantes y mejor reputación gracias
+                al feedback.</p>
+            </div>
+          </div>
+          <div class="benefits-card alternate">
+            <img src="assets/img/benefits/supplierbenefit-10.png" alt="Beneficio 10" />
+            <div class="benefits-text">
+              <p data-i18n="benefits.supplierCards.10">Plataforma accesible para organizar y optimizar sus despachos.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="testimonies" class="testimonios-section">
       <div class="container">
@@ -462,7 +376,7 @@
         <div class="faq-box">
           <div class="flex-desplegable" onclick="toggleFaq(this)">
             <h3 data-i18n="faq.items.2.question">¿Cuánto cuesta Restock?</h3>
-            <img class="flecha" src="assets/img/preguntas/flecha.svg" alt="Material Icon">
+              <img class="flecha" src="assets/img/preguntas/flecha.svg" alt="Material Icon">
           </div>
           <p class="respuesta" data-i18n="faq.items.2.answer">En Restock, todos nuestros planes te ofrecen los mismos
             beneficios premium. Puedes
@@ -488,59 +402,59 @@
       </div>
     </section>
 
+    <section class="tutorial" id="tutorial">
+      <div class="tutorial__header">
+        <h1 class="tutorial__title" data-i18n="tutorial.title">Tutorial</h1>
+        <p class="tutorial__description" data-i18n="tutorial.description">How to use the platform? Here are the main
+          things you need to know!</p>
+      </div>
+      <div class="tutorial__grid">
+        <div class="tutorial__step">
+          <div class="tutorial__step-title" data-i18n="tutorial.steps.1">1. Choose your subscription plan.</div>
+          <img src="assets/img/tutorial/tutorial1.png" alt="Step 1 of the tutorial">
+        </div>
+        <div class="tutorial__step">
+          <div class="tutorial__step-title" data-i18n="tutorial.steps.2">2. In the inventory section, you will see the
+            option to add the
+            ingredients/inputs you are working with.</div>
+          <img src="assets/img/tutorial/tutorial2.png" alt="Step 2 of the tutorial">
+        </div>
+        <div class="tutorial__step">
+          <div class="tutorial__step-title" data-i18n="tutorial.steps.3">3. Enter your input information.</div>
+          <img src="assets/img/tutorial/tutorial3.png" alt="Step 3 of the tutorial">
+        </div>
+        <div class="tutorial__step">
+          <div class="tutorial__step-title" data-i18n="tutorial.steps.4">4. You will then see a list of your inventory
+            stock.</div>
+          <img src="assets/img/tutorial/tutorial4.png" alt="Step 4 of the tutorial">
+        </div>
+      </div>
+      <div class="tutorial__links-container">
+        <div class="tutorial__links">
+          <ul>
+            <li data-i18n="tutorial.links.item1">This way, you will be able to manage your inventory, receive alerts,
+              place automatic orders and much
+              more!</li>
+            <li>
+              <span data-i18n="tutorial.links.item2">To learn more about the platform go to:</span>
+              <div class="tutorial__video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jaTRL6bPTAY?si=WXlqrBjqUyx37VKQ"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
+                </iframe>
+              </div>
+            </li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+          </ul>
+        </div>
+      </div>
+      <div class="tutorial__cta-container" style="text-align: center; margin-top: 2rem;">
+        <button class="tutorial__cta-button" onclick="location.href='/access.html#signup'" data-i18n="tutorial.cta">
+          Start Now
+        </button>
+      </div>
+    </section> 
 
     </section>
 
@@ -571,31 +485,31 @@
       </div>
     </section>
 
+<section id="download" class="download-section">
+      <div class="download-wrapper">
+        <img src="assets/img/descargar/imagen-principal.png" alt="Personas analizando datos" class="download-bg-image">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="download-card">
+          <h2 data-i18n="download.title">Descarga Restock y mejora tu negocio</h2>
+          <p data-i18n="download.description">
+            Gestiona tu inventario de forma inteligente y sin complicaciones, desde cualquier lugar. <br>
+            Disponible para iOS y Android, Restock te ofrece herramientas avanzadas para controlar insumos, pedidos y
+            proveedores en tiempo real. Recibe alertas automáticas, toma decisiones estratégicas y mantén tu restaurante
+            o negocio siempre abastecido.
+            ¡Descárgala gratis y lleva tu gestión al siguiente nivel con Restock!
+          </p>
+          <div class="store-buttons">
+            <div class="store-icon-wrapper">
+              <img src="assets/img/descargar/playstore.png" alt="Google Play" class="store-icon">
+            </div>
+            <div class="store-icon-wrapper">
+              <img src="assets/img/descargar/apple.png" alt="App Store" class="store-icon">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer" id="footer">
     <div class="footer__top">
