--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
     <section>
        <div class="about-us-video">
                         <h2 class="about-us-subtitle" data-i18n="aboutUs.video.title">Equipo de Desarrollo</h2>
-                        <!-- <div class="tutorial__video-container">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/WgRCGVA_L8g?si=Oee3ArIqJrEnUftb"
+                        <div class="tutorial__video-container">
+                            <iframe width="560" height="315" src="https://youtu.be/KrsjIP4Q0gA?si=6YCluNNVfm9uWDfp"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
-                        </div> -->
+                        </div>
                     </div>
     </section>
 
@@ -559,5 +559,6 @@
 </body>
 
 </html>
+
 
 
