--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
        <div class="about-us-video">
                         <h2 class="about-us-subtitle" data-i18n="aboutUs.video.title">Equipo de Desarrollo</h2>
                         <div class="tutorial__video-container">
-                            <iframe width="560" height="315" src="https://youtu.be/KrsjIP4Q0gA?si=6YCluNNVfm9uWDfp"
+                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=KrsjIP4Q0gA"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
@@ -559,6 +559,7 @@
 </body>
 
 </html>
+
 
 
 
