Add animations on scroll, smooth scrolling, and enhanced styles across various components
- Implemented Intersection Observer for scroll animations on cards and section titles.
- Added parallax effect for hero image and text during scroll.
- Enhanced navbar visibility on scroll.
- Introduced smooth scrolling for anchor links.
- Created a counter animation function for numerical displays.
- Added preloader effect for page fade-in.
- Developed a new CSS file for general animations and defined keyframes for various effects.
- Updated styles for benefits, contact, download, footer, FAQs, testimonials, tutorial, and team sections with gradients, shadows, and hover effects.
- Modified HTML to include new CSS and JS files for animations.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <!-- Estilos -->
 
   <link rel="stylesheet" href="assets/styles/styles.css" />
+  <link rel="stylesheet" href="assets/styles/animations.css" />
   <link rel="stylesheet" href="assets/styles/testimonios.css" />
   <link rel="stylesheet" href="assets/styles/preguntas-frecuentes.css" />
   <link rel="stylesheet" href="assets/styles/descargar.css" />
@@ -214,7 +215,7 @@
        <div class="about-us-video">
                         <h2 class="about-us-subtitle" data-i18n="aboutUs.video.title">Equipo de Desarrollo</h2>
                         <div class="tutorial__video-container">
-                            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=KrsjIP4Q0gA"
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KrsjIP4Q0gA"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
@@ -554,6 +555,7 @@
   </footer>
 
   <script src="assets/scripts/main.js" defer></script>
+  <script src="assets/scripts/animations.js" defer></script>
   <script src="assets/scripts/desplegable-preguntas.js" defer></script>
   <script src="assets/scripts/translations.js"></script>
 </body>
